package armas.model.pedido;

public enum StatusPedido {

    PENDENTE,
    APROVADO,
    REPROVADO,
    PAGO,
    CANCELADO
}